--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 	</dependencyManagement>
 
 	<dependencies>
+	<dependency>
+		<groupId>org.rxtx</groupId>
+		<artifactId>rxtx</artifactId>
+		<version>2.1.7</version>
+	</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
