--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,12 @@
 			<artifactId>netty-all</artifactId>
 			<version>4.0.29.Final</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.rxtx</groupId>
+			<artifactId>rxtx</artifactId>
+			<version>2.1.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
