--- a/pom.xml
+++ b/pom.xml
@@ -216,7 +216,11 @@
 			<version>1.2.1</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.directwebremoting</groupId>
+			<artifactId>dwr</artifactId>
+			<version>3.0.1-RELEASE</version>
+		</dependency>
 
 
 		<dependency>
@@ -243,7 +247,17 @@
 					<overwrite>true</overwrite>
 				</configuration>
 			</plugin>
-
+    	<plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <port>8080</port>
+					<protocol>org.apache.coyote.http11.Http11NioProtocol</protocol>
+                    <uriEncoding>UTF-8</uriEncoding>
+                    <server>tomcat7</server>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
