--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,16 @@
 				</configuration>
 			</plugin>
 
+			<!-- solve the bug can't boot -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
